# machine-learning-zoomcamp

./: pyproject.toml
01_intro/: hw01.ipynb
02_regression/: hw02.ipynb
04_evaluation/: hw04.ipynb
05_deployment/: Dockerfile  app.py  app_docker.py  hw05.ipynb  pyproject.toml  test.py
06_trees/: hw06.ipynb  hwtest.ipynb
