[project]
name = "machine-learning-zoomcamp-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]
# to let dir 05_deployment as an independent dir, since the home dir has different scikit-learn
# [tool.uv.workspace]
# members = [
#     "05_deployment",
# ]
